<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#71DDDD"
    tools:context=".SubsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:text="@string/a_whole_new_world"
        android:textColor="#0A0101"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="311dp"
        android:layout_height="40dp"
        android:layout_marginBottom="700dp"
        android:gravity="center_horizontal"
        android:text="@string/join_in_green_light_membership_and_open_a_door_to_endless_creativities"
        android:textAlignment="center"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView

        android:id="@+id/imageView3"
        android:layout_width="304dp"
        android:layout_height="361dp"
        android:src="@drawable/image_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="256dp"
        android:layout_height="52dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/rectangle_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/gold"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/greenlight_gold_3_99_mo"
        android:textColor="#0A0101"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="256dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/rectangle_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/platinum"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/greenlight_platinum_9_99_6mo"
        android:textColor="#0A0101"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="256dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/rectangle_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/diamond"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginLeft="110dp"
        android:text="@string/greenlight_diamond_19_99_year"
        android:textColor="#0A0101"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>