<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#71DDDD"
    tools:context=".Types">
    <TextView
        android:id="@+id/textView10"
        android:layout_width="311dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/membership_types_and_benefits"
        android:textColor="#0A0101"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView

        android:id="@+id/imageView9"
        android:layout_width="387dp"
        android:layout_height="635dp"
        android:src="@drawable/rectangle_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/gold_member"
        android:textColor="#0A0101"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/_3_99_per_month"
        android:textColor="#0A0101"
        android:textSize="14dp"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/polygon_1"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/platinum_member"
        android:textColor="#0A0101"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="244dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/_9_99_for_6_months_n_bonus_free_1_month_n_10_discount_for_resubscription_n_1_week_extend_to_re_subscribe_when_cancelled_subscription"
        android:textColor="#0A0101"
        android:textSize="14dp"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/polygon_2"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/polygon_3"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="38dp"
        android:text="@string/diamond_member"
        android:textColor="#0A0101"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="243dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/_19_99_per_year_n_bonus_free_3_months_n_15_discount_for_resubscription_n_2_weeks_extend_to_re_subscribe_when_cancelled_subscription"
        android:textColor="#0A0101"
        android:textSize="14dp"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="325dp"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:src="@drawable/line_1"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="105dp"
        android:text="@string/your_order_selection"
        android:textColor="#0A0101"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

    <ImageView
        android:id="@+id/circleLeft"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="150dp"
        android:src="@drawable/circledark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="150dp"
        android:src="@drawable/circlelight2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circleLeft"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/circleRight2"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="150dp"
        android:src="@drawable/circledark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="99dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/textView35">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gold Member" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Platinum Member" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Diamond Member" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>